<resources>
    <string name="app_name">SharedViewModelPracticeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_text">Enter first text</string>
    <string name="enter_second_text">Enter second text</string>
    <string name="save">Save</string>
    <string name="first_fragment">First Fragment: %s</string>
    <string name="second_fragment">Second Fragment: %s</string>
</resources>